change java 1.8 to 11

--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -25,7 +25,7 @@ android {
             //..
         }
         release {
-            minifyEnabled true
+            minifyEnabled false
             buildConfigField("long", "VERSION_CODE", "${defaultConfig.versionCode}")
             buildConfigField("String", "VERSION_NAME", "\"${defaultConfig.versionName}\"")
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
