--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+        mavenLocal()
         jcenter()
-        maven { url 'https://jitpack.io'}
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
@@ -15,6 +15,13 @@ buildscript {
     }
 }
 
+allprojects {
+    repositories {
+        google()
+        jcenter()
+        maven { url 'https://jitpack.io'}
+    }
+}
 
 task clean(type: Delete) {
     delete rootProject.buildDir
