--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 30
 
     defaultConfig {
-        applicationId "com.mobio.analytics"
+        applicationId "com.mobio.sample"
         minSdk 21
         targetSdk 30
         versionCode 2
