--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 30
 
     defaultConfig {
-        minSdk 21
+        minSdk 16
         targetSdk 30
         versionCode 1
         versionName "1.0.0"
@@ -43,6 +43,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.3.1'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
