--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,7 @@
             android:exported="true" />
         <activity
             android:name=".HomeActivity"
+            android:launchMode="singleTop"
             android:exported="true"
             android:theme="@style/CustomTheme" />
         <activity
