--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,14 +23,6 @@
             android:name=".MainActivity"
             android:exported="true" />
 
-        <service
-            android:name=".MyFirebaseMessagingService"
-            android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT" />
-            </intent-filter>
-        </service>
-
         <activity
             android:name=".TransferSuccessActivity"
             android:exported="true" />
@@ -66,6 +58,13 @@
             android:name=".LoginActivity"
             android:exported="true"
             android:theme="@style/CustomTheme" />
+
+        <service
+            android:name="com.mobio.analytics.client.service.SDKPushFirebaseService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
 
     </application>
 
