--- a/analytics/src/main/AndroidManifest.xml
+++ b/analytics/src/main/AndroidManifest.xml
@@ -1,12 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.mobio.analytics">
+    package="com.mobio.analytics" >
 
-    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
 
     <application>
+        <service
+            android:name=".client.service.ClickNotificationService"
+            android:exported="false" >
+        </service>
         <service
             android:name=".client.service.TerminateService"
             android:stopWithTask="false" />
@@ -18,8 +22,14 @@
         <receiver
             android:name=".client.receiver.NotificationDismissedReceiver"
             android:exported="false" />
-        <receiver android:name=".client.receiver.AlarmReceiver"
-            android:enabled="true"/>
+        <receiver
+            android:name=".client.receiver.AlarmReceiver"
+            android:enabled="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+                <action android:name="ACTION_LAUNCH_NOTI" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
