--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -47,17 +47,19 @@
         <activity
             android:name=".SplashActivity"
             android:exported="true">
+        </activity>
+        <activity
+            android:launchMode="singleTop"
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:theme="@style/CustomTheme" >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:launchMode="singleTop"
-            android:name=".LoginActivity"
-            android:exported="true"
-            android:theme="@style/CustomTheme" />
 
         <service
             android:name="com.mobio.analytics.client.service.SDKPushFirebaseService">
