--- a/analytics/src/main/AndroidManifest.xml
+++ b/analytics/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
             android:exported="false" />
         <receiver
             android:name=".client.receiver.AlarmReceiver"
-            android:enabled="true" >
+            android:enabled="true"
+            android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="ACTION_LAUNCH_NOTI" />
