commit for build sdk

--- a/analytics/src/main/AndroidManifest.xml
+++ b/analytics/src/main/AndroidManifest.xml
@@ -5,6 +5,9 @@
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
 
     <application>
         <activity
@@ -13,7 +16,7 @@
 
         <service
             android:name=".client.service.ClickNotificationService"
-            android:exported="false"></service>
+            android:exported="false"/>
         <service
             android:name=".client.service.TerminateService"
             android:stopWithTask="false" />
@@ -32,6 +35,15 @@
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
                 <action android:name="ACTION_LAUNCH_NOTI" />
+            </intent-filter>
+        </receiver>
+
+        <receiver
+            android:name=".client.receiver.NetworkChangeReceiver"
+            android:enabled="true"
+            android:exported="false">
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
             </intent-filter>
         </receiver>
     </application>
