--- a/analytics/src/main/AndroidManifest.xml
+++ b/analytics/src/main/AndroidManifest.xml
@@ -5,24 +5,28 @@
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
+    <uses-permission
+        android:name="android.permission.READ_PRIVILEGED_PHONE_STATE"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
     <application>
+        <activity
+            android:name=".client.activity.PopupBuilderActivity"
+            android:exported="true" />
         <activity
             android:name=".client.activity.TransparentDeeplinkHandleActivity"
             android:exported="true" />
 
         <service
             android:name=".client.service.ClickNotificationService"
-            android:exported="false"/>
+            android:exported="false" />
         <service
             android:name=".client.service.TerminateService"
             android:stopWithTask="false" />
@@ -39,7 +43,6 @@
                 <action android:name="ACTION_LAUNCH_NOTI" />
             </intent-filter>
         </receiver>
-
         <receiver
             android:name=".client.receiver.NetworkChangeReceiver"
             android:enabled="true"
