--- a/analytics/src/main/AndroidManifest.xml
+++ b/analytics/src/main/AndroidManifest.xml
@@ -23,7 +23,8 @@
             android:exported="true" />
         <activity
             android:name=".client.activity.TransparentDeeplinkHandleActivity"
-            android:exported="true" />
+            android:exported="true" >
+        </activity>
 
         <service
             android:name=".client.service.ClickNotificationService"
