--- a/analytics/src/main/AndroidManifest.xml
+++ b/analytics/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
     <application>
         <activity
             android:name=".client.activity.PopupBuilderActivity"
+            android:theme="@style/Theme.AppCompat.Translucent"
             android:exported="true" />
         <activity
             android:name=".client.activity.TransparentDeeplinkHandleActivity"
