--- a/analytics/build.gradle
+++ b/analytics/build.gradle
@@ -18,7 +18,7 @@ android {
 
     buildTypes {
         debug {
-            minifyEnabled false
+            minifyEnabled true
             buildConfigField("long", "VERSION_CODE", "${defaultConfig.versionCode}")
             buildConfigField("String","VERSION_NAME","\"${defaultConfig.versionName}\"")
             buildConfigField "String", "API_URL", "\"https://t1.mobio.vn/digienty/web/api/v1.1/\""
@@ -26,7 +26,7 @@ android {
             //..
         }
         release {
-            minifyEnabled false
+            minifyEnabled true
             buildConfigField("long", "VERSION_CODE", "${defaultConfig.versionCode}")
             buildConfigField("String", "VERSION_NAME", "\"${defaultConfig.versionName}\"")
             buildConfigField "String", "API_URL", "\"https://t1.mobio.vn/digienty/web/api/v1.1/\""
